.labs/Local-Kubernetes/mlops/manifests/lakefs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lakefs
spec:
  type: ClusterIP
  selector:
    app: lakefs
  ports:
    - name: http
      port: 8000
      targetPort: 8000
